<resources>
    <string name="app_name">Моя ласточка</string>
    <string name="title_activity_main">Моя ласточка</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="post">Поставщики</string>
    <string name="storage">Склад</string>
    <string name="history">История закупок</string>
    <string name="sell">Продажи</string>
    <string name="sells_det">Продажа товара</string>
    <string name="providers">Добавить Поставщиков</string>
    <string name="add_details">Добавить детали</string>
    <string name="add_car">Добавить авто</string>
    <string name="nav_supp">Закупка товара</string>
    <string name="nav_warehouse">Склад</string>
    <string name="sell_history">История продаж</string>
</resources>
