<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_warehouse"
            android:title="@string/nav_warehouse"/>
        <item android:id="@+id/nav_history"
            android:title="@string/history" />
        <item android:id="@+id/nav_supp"
            android:title="@string/nav_supp" />
        <item android:id="@+id/nav_sell"
            android:title="@string/sells_det" />
        <item android:id="@+id/providers"
            android:title="@string/providers" />
        <item android:id="@+id/add_details"
            android:title="@string/add_details" />
        <item android:id="@+id/add_car"
            android:title="@string/add_car" />
    </group>


</menu>